corrections on dsl plugin and figure